Update bcrypt gemfile, update user controller, validate user model and add sessions controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ @import "category.scss";
+ @import "dashboard.scss";
+ @import "notification.scss";
+ @import "task.scss";
+ @import "user.scss";
