Login logout success and implement bootstrap flash message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,7 @@
  @import "notification.scss";
  @import "task.scss";
  @import "user.scss";
+
+ /* For flash messages */
+ @import "bootstrap";
+ @import "flash.scss";
