--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -1,8 +1,15 @@
 <h1> Welcome to OwLabs </h1>
 
 <% if current_user %>
-    <p>Welcome, <%= current_user.username %>! You are logged in.</p>
-    <%= link_to 'Log Out', logout_path, method: :delete %>
+    <div>
+        <%= link_to 'Log Out', logout_path, method: :delete %>
+    </div>
 <% else %>
-    <%= link_to 'Log In', login_path %> | <%= link_to 'Sign Up', new_user_path %>
+    <div>
+        <%= link_to 'Log In', new_session_path %>
+    </div>
+    
+    <div>
+        <%= link_to 'Sign Up', new_user_path %>
+    </div>
 <% end %>
