--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,3 @@
-<%= form_with(model: @user, url: users_path) do |f| %>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+<h1> Sign Up Form </h1>
 <br>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-<br>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-<br>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-<br>
-    <%= f.submit "Sign Up" %>
-<% end %>
+<%= render 'signup_form'%>
