--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -1,15 +1,19 @@
-<h1> Welcome to OwLabs </h1>
+<div class="center-container">
+    <h1>Welcome to OwLabs</h1>
 
-<% if current_user %>
-    <div>
-        <%= link_to 'Log Out', logout_path, method: :delete %>
-    </div>
-<% else %>
-    <div>
-        <%= link_to 'Log In', new_session_path %>
-    </div>
-    
-    <div>
-        <%= link_to 'Sign Up', new_user_path %>
-    </div>
-<% end %>
+    <% if current_user %>
+        <div>
+            <%= link_to 'Log Out', logout_path, method: :delete, class: 'button' %>
+        </div>
+    <% else %>
+        <div class="float-container">
+            <div>
+                <%= link_to 'Log In', new_session_path, class: 'button' %>
+            </div>
+
+            <div>
+                <%= link_to 'Sign Up', new_user_path, class: 'button' %>
+            </div>
+        </div>
+    <% end %>
+</div>
