Update CSS into Login and Dashboard Module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+body {
+    background-color: rgb(27, 37, 41) !important;
+}
+
  @import "category.scss";
  @import "dashboard.scss";
  @import "notification.scss";
