--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,15 +1,78 @@
+/* CSS for users/new.html.erb */
+.colored-heading {
+    color: wheat;
+}
+
 .center-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    color: wheat;
+}
+/* CSS for users/new.html.erb */
+
+/* CSS for users/_signup_page.html.erb */
+.form {
+    position: relative;
+    width: 100%;
+    margin-bottom: 8px;
+}
+  
+.form input[type="text"] {
+    width: 500px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    outline: none;
 }
 
-.float-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
+.form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    outline: none;
+}
+  
+.form label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: grey;
+    pointer-events: none;
+    transition: all 0.3s;
+}
+
+.input-label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: grey;
+    pointer-events: none;
+    transition: all 0.3s;
+    opacity: 1;
+}
+
+.input-label.focused {
+    top: -10px;
+    font-size: 12px;
+    color: grey;
+    opacity: 0;
+    transition: all 0.3s, opacity 0.3s;
+}
+  
+.form input[type="text"]:focus + label,
+.form input[type="text"]:not(:placeholder-shown) + label {
+    top: -10px;
+    font-size: 12px;
+    color: grey;
+}
+  
+.form input[type="text"]:focus {
+    border-color: blue; /* Add your desired focus border color here */
 }
 
 .button {
@@ -27,3 +90,4 @@
 .button:hover {
     background-color: #0056b3;
 }
+/* CSS for users/_signup_page.html.erb */
