--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "flash" %>
+    <%= javascript_include_tag "label_behavior" %>
+    <%= render 'layouts/flash' %>
   </head>
 
   <body>
-  <%= render 'layouts/flash' %>
     <%= yield %>
   </body>
 </html>
