--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -1,25 +1,25 @@
 <%= form_with(model: @user) do |f| %>
-    <div>
-        <%= f.label :username %>
+    <div class="form">
+        <%= f.label :username, class: "input-label" %>
         <%= f.text_field :username %>
     </div>
 
-    <div>
-        <%= f.label :email %>
+    <div class="form">
+        <%= f.label :email, class: "input-label" %>
         <%= f.text_field :email %>
     </div>
 
-    <div>
-        <%= f.label :password %>
+    <div class="form">
+        <%= f.label :password, class: "input-label" %>
         <%= f.password_field :password %>
     </div>
 
-    <div>
-        <%= f.label :password_confirmation %>
+    <div class="form">
+        <%= f.label :password_confirmation, class: "input-label" %>
         <%= f.password_field :password_confirmation %>
     </div>
 
     <div>
-        <%= f.submit "Sign Up" %>
+        <%= f.submit "Sign Up", class: 'button' %>
     </div>
 <% end %>
