--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1> Sign Up Form </h1>
-<br>
-<%= render 'signup_form'%>
+<div class="center-container">
+    <h1 class="colored-heading"> Sign Up Form </h1>
+    <br>
+    <%= render 'signup_form'%>
+</div>
