View and update user profile

--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -1,11 +1,16 @@
 <div class="center-container">
-    <h1>Welcome to OwLabs</h1>
 
     <% if current_user %>
+    <h1>Welcome to OwLabs, <%= current_user.username %></h1>
         <div>
             <%= link_to 'Log Out', logout_path, method: :delete, class: 'button' %>
         </div>
+        <br>
+        <div>
+            <%= link_to 'Edit Profile', edit_user_path(current_user), class: 'button' %>
+        </div>
     <% else %>
+        <h1>Welcome to OwLabs</h1>
         <div class="float-container">
             <div>
                 <%= link_to 'Log In', new_session_path, class: 'button' %>
