Added icon and name for each page's tab module

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Edit Profile" %>
+
 <div class="center-container">
     <h1 class="colored-heading"> Edit account </h1>
     <br>
