--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Sign Up" %>
+
 <div class="center-container">
     <h1 class="colored-heading"> Sign Up Form </h1>
     <br>
