Added icon logo to the landing page

--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -3,7 +3,7 @@
 <div class="center-container">
 
     <% if current_user %>
-    <h1>Welcome to OwLabs, <%= current_user.username %></h1>
+    <h1><%= image_tag "owl.png" %>Welcome to OwLabs, <%= current_user.username %></h1>
         <div>
             <%= link_to 'Log Out', logout_path, method: :delete, class: 'button' %>
         </div>
@@ -12,7 +12,7 @@
             <%= link_to 'Edit Profile', edit_user_path(current_user), class: 'button' %>
         </div>
     <% else %>
-        <h1>Welcome to OwLabs</h1>
+        <h1><%= image_tag "owl.png" %>Welcome to OwLabs</h1>
         <div class="float-container">
             <div>
                 <%= link_to 'Log In', new_session_path, class: 'button' %>
