--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -29,4 +29,9 @@
 .button:hover {
     background-color: #0056b3;
 }
+
+.profile-icon{
+    width: 24px;
+    height: 24px;
+}
 /* CSS for dashboards/landing_page.html.erb */
