--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -8,9 +8,6 @@
             <%= link_to 'Log Out', logout_path, method: :delete, class: 'button' %>
         </div>
         <br>
-        <div>
-            <%= link_to 'Edit Profile', edit_user_path(current_user), class: 'button' %>
-        </div>
     <% else %>
         <h1><%= image_tag "owl.png" %>Welcome to OwLabs</h1>
         <div class="float-container">
@@ -23,4 +20,7 @@
             </div>
         </div>
     <% end %>
+</div>
+<div>
+    <%= image_tag ""%>
 </div>
