--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>
       <%= yield(:title) || "Task Management Apps" %>
     </title>
+    <%= render 'layouts/navbar' %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,10 +14,15 @@
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag "flash" %>
     <%= javascript_include_tag "label_behavior" %>
+    <%= javascript_include_tag "navbar" %>
     <%= render 'layouts/flash' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
-    <%= yield %>
+    <div class=""container>
+        <%= yield %>
+    </div>
   </body>
 </html>
