--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,3 +16,9 @@
 .profile-icon:hover {
     transform: scale(1.1);
 }
+
+/* Adjust the positioning of the navbar links */
+.navbar-nav.ml-auto {
+    margin-left: 20%;
+    padding-right: 20px; /* You can adjust this value to control the spacing */
+}
