--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,7 @@
-<% flash.each do |name, msg| %>
-  <div class='alert alert-<%= name %>'>
-    <%= msg %>
-  </div>
-<%end%>
+<div class="flash-container">
+  <% flash.each do |name, msg| %>
+    <div class='flash flash-<%= name %>'>
+      <%= msg %>
+    </div>
+  <% end %>
+</div>
