--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light animated-navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light animated-navbar fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="/">Home</a>
-            <a class="nav-item nav-link" href="#">About</a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link active" href="#">About</a>
+            <a class="nav-item nav-link active" href="#">Features</a>
+            <a class="nav-item nav-link active" href="#">Pricing</a>
         </div>
     </div>
     <% if current_user %>
@@ -16,6 +16,18 @@
                 <%= link_to edit_user_path(current_user), class: 'nav-link' do %>
                     <%= image_tag "user.png", alt: "Edit Profile", class: "profile-icon" %>
                 <% end %>
+            </li>
+        </ul>
+    <% else %>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/OwLabs-Developer"><i class="fab fa-github"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://twitter.com/?lang=en"><i class="fas fa-times"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
             </li>
         </ul>
     <% end %>
