--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,28 @@
     <title>
       <%= yield(:title) || "Task Management Apps" %>
     </title>
-    <%= render 'layouts/navbar' %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag asset_path('owl.png') %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "flash" %>
-    <%= javascript_include_tag "label_behavior" %>
-    <%= javascript_include_tag "navbar" %>
-    <%= render 'layouts/flash' %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/flash' %>
+
     <div class=""container>
         <%= yield %>
     </div>
+
+    <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "navbar" %>
+    <%= javascript_include_tag "flash" %>
+    <%= javascript_include_tag "label_behavior" %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
