--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: wheat;
+    // color: wheat;
 }
 /* CSS for users/new.html.erb */
 
