--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,11 +1,18 @@
 /* CSS for dashboards/landing_page.html.erb */
+.owl-logo {
+    margin-top: 30px; 
+    margin-left: 61px;
+    width: 150px; /* Set the desired width */
+    height: auto; /* Maintain aspect ratio */
+}
+
 .center-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    color: wheat;
+    // color: wheat;
 }
 
 .float-container {
@@ -15,7 +22,7 @@
 }
 
 .button {
-    padding: 10px 20px;
+    padding: auto;
     background-color: #0e8d9e;
     color: white;
     text-decoration: none;
