--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,7 +4,7 @@
 }
 
 .animated-navbar.scrolled {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -21,4 +21,34 @@
 .navbar-nav.ml-auto {
     margin-left: 20%;
     padding-right: 20px; /* You can adjust this value to control the spacing */
+}
+
+/* Light Theme Styles */
+.light-theme {
+    background-color: gainsboro;
+    color: black;
+
+    .navbar-nav .nav-item.nav-link {
+        color: black;
+
+        .fab,
+        .fas {
+            color: black;
+        }
+    }
+}
+
+/* Dark Theme Styles */
+.dark-theme {
+    background-color: rgb(27, 37, 41);
+    color: wheat;
+
+    .navbar-nav .nav-item.nav-link {
+        color: wheat;
+
+        .fab,
+        .fas {
+            color: wheat;
+        }
+    }
 }
