--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light animated-navbar fixed-top">
+<nav class="navbar navbar-expand-lg animated-navbar fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="/">Home</a>
-            <a class="nav-item nav-link active" href="#">About</a>
-            <a class="nav-item nav-link active" href="#">Features</a>
-            <a class="nav-item nav-link active" href="#">Pricing</a>
+            <a class="nav-item nav-link active" href="/about">About</a>
+            <a class="nav-item nav-link active" href="/features">Features</a>
+            <a class="nav-item nav-link active" href="/pricing">Pricing</a>
         </div>
+    </div>
+    <div class="form-check form-switch ml-3">
+        <input class="form-check-input" type="checkbox" role="switch" id="themeSwitch">
+        <label class="form-check-label" for="themeSwitch">Dark Theme</label>
     </div>
     <% if current_user %>
         <ul class="navbar-nav ml-auto">
