--- a/app/views/user_mailer/verification_email.html.erb
+++ b/app/views/user_mailer/verification_email.html.erb
@@ -1,4 +1,4 @@
 Welcome to Our App! To complete your registration, please click the link below to verify your email address:
 
-<%= verify_email_session_custom_url(token: @user.verification_token, username: @user.username, host: 'owlabs.online', port: 3000 ) %>
+<%= verify_email_session_custom_url(token: @user.verification_token, username: @user.username, host: 'localhost', port: 3000 ) %>
 
