--- a/app/views/dashboards/landing_page.html.erb
+++ b/app/views/dashboards/landing_page.html.erb
@@ -8,6 +8,7 @@
                 Welcome to OwLabs, <%= current_user.username %>
             </h1>
                 <%= link_to 'Your Task', tasks_path, class: 'button' %>
+                <%= link_to 'Show Category', new_category_path, class: 'button' %>
                 <%= link_to 'Log Out', logout_path, method: :delete, class: 'button' %>
         </div>
         <br>
