--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Your Tasks</h1>
 
+<%= search_form_for @q do |f| %>
+  <div class="field">
+    <%= f.label :title_or_category_name_cont, "Search Task Title or Category" %>
+    <%= f.text_field :title_or_category_name_cont %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Search" %>
+  </div>
+<% end %>
+
+
 <table>
   <thead>
     <tr>
@@ -18,12 +29,18 @@
         <td><%= task.due_date %></td>
         <td><%= task.priority %></td>
         <td><%= task.status ? 'Completed' : 'Pending' %></td>
-        <td><%= task.category %></td>
-        <td><%= link_to 'Edit', edit_task_path(task), class: 'btn btn-primary' %></td>
         <td>
-                    <%= form_with(model: task, method: :delete) do |form| %>
-                        <%= form.submit 'Delete', class: 'btn btn-danger' %>
-                    <% end %>
+          <% if task.category %>
+            <%= task.category.name %>
+          <% else %>
+            No Category
+          <% end %>
+        </td>
+        <td>
+          <%= link_to 'Edit', edit_task_path(task), class: 'btn btn-primary' %>
+          <%= form_with(model: task, method: :delete) do |form| %>
+            <%= form.submit 'Delete', class: 'btn btn-danger' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
